# biosteam

./: .envrc  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  COMPREHENSIVE_EXCEL_PARAMETER_EXTRACTION_REPORT.md  Condense Session Log.md  DSP01-Concentration & Buffer Exchange.md  DSP02-AEX Chromatography .md  DSP02-Chitosan Coacervate Capture (for OPN in K. lactis supernatant).md  Data Matrix.md  ENVIRONMENT_REFERENCE.md  MANIFEST.in  OSTEOPONTIN_MIGRATION_FINDINGS.md  SETUP_GUIDE.md  USP01-Seed Fermentation.md  USP02-Production Fermentation.md  package-lock.json  pytest.ini  setup.py
Archive/: ARCHIVE_INDEX.md
Biosteam BD Module Specs/: A standardized accounting scheme.md  DSP01-Concentration & Buffer Exchange Followup.md  DSP02-AEX Chromatography Followup.md  DSP02-AEX Reality Show.md  DSP02-Chitosan Coacervate Followup.md  DSP03-Concentration & Buffer Exchange Followup.md  DSP03-Concentration & Buffer Exchange.md  DSP04-Polish & Sterile Finish Followup.md  DSP04-Polish & Sterilization.md  DSP05-Final Form & Finish Followup.md  DSP05-Final Form & Finish.md  Media & Feeds — Minimal Defined.md  USP01-Seed Fermentation Followup.md  USP02-Production Fermentation Followup.md  USP02-Production Fermentation.md  USP03-Cell Separation Followup.md  USP03-Cell Separation.md
NextSteps/: NextSteps_BioSTEAM_Migration.md  (+1 more)
app/: Makefile  (+1 more)
app/api/: main.py  pyproject.toml
app/api/engine/: builder.py  registry.py  runner.py  storage_fs.py  uncertainty.py
app/api/models/: common.py  scenario.py
app/api/routers/: runs.py  scenarios.py  units.py
app/api/tests/: test_golden.py
(+188 files in other folders)
